--- a/src/main/resources/templates/projects.html
+++ b/src/main/resources/templates/projects.html
@@ -10,6 +10,8 @@
 
 <main>
 
+    <h1 th:if="${message != null}" th:text="${message}"></h1>
+
     <!--/*@thymesVar id="project" type="pl.pawel.model.projection.ProjectWriteModel"*/-->
     <form method="post" th:action="@{/projects}" th:object="${project}">
         <fieldset>
