Added validation for groups form

--- a/src/main/resources/templates/groups.html
+++ b/src/main/resources/templates/groups.html
@@ -11,6 +11,22 @@
             color: #555;
         }
 
+        .bd{
+            border: solid 1px black;
+        }
+        .p\(0\) {
+            padding: 0;
+        }
+        .p\(10\){
+            padding: 10px;
+        }
+        .bdc\(red\) {
+            border-color: red;
+        }
+        .c\(red\) {
+            color: red;
+        }
+
     </style>
 </head>
 <body>
